cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_15.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:78: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:78:13: Write of unused value
76.               tout0 = tin[0] ^ xor0;
77.               tout1 = tin[1] ^ xor1;
78.               l2nn(tout0, tout1, out, l + 8);
                  ^
79.               xor0 = tin0;
80.               xor1 = tin1;
